--- a/src/CreateScene.fxml
+++ b/src/CreateScene.fxml
@@ -46,6 +46,7 @@
       <Pane layoutX="377.0" layoutY="68.0" prefHeight="691.0" prefWidth="921.0" style="-fx-background-color: #715C5C;">
          <children>
             <Label layoutX="324.0" layoutY="296.0" prefHeight="108.0" prefWidth="216.0" text="Placeholder: Create Page" textAlignment="CENTER" />
+            <Label text="Recipe 1" layoutX="160" layoutY="350" prefHeight="108.0" prefWidth="216.0"/>
          </children>
       </Pane>
    </children>
