--- a/src/Applet/CreateScene.fxml
+++ b/src/Applet/CreateScene.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="829.0" prefWidth="1295.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Applet.SceneController">
    <children>
-      <!-- header -->
       <Pane layoutY="-2.0" prefHeight="70.0" prefWidth="1296.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <Label layoutX="577.0" layoutY="-1.0" prefHeight="70.0" prefWidth="147.0" text="CHEF.LY" textAlignment="CENTER">
@@ -18,10 +20,7 @@
             </Label>
          </children>
       </Pane>
-
       <Pane layoutY="760.0" prefHeight="70.0" prefWidth="1296.0" style="-fx-background-color: #FFFFFF;" />
-
-      <!-- Side panel -->
       <Pane layoutY="68.0" prefHeight="692.0" prefWidth="377.0" style="-fx-background-color: #E7DBDB;">
          <children>
             <Button fx:id="browseButton" layoutX="92.0" layoutY="104.0" mnemonicParsing="false" onAction="#switchToBrowseScene" prefHeight="104.0" prefWidth="210.0" text="BROWSE">
@@ -41,12 +40,24 @@
             </Button>
          </children>
       </Pane>
-
-      <!-- Create view -->
       <Pane layoutX="377.0" layoutY="68.0" prefHeight="691.0" prefWidth="921.0" style="-fx-background-color: #715C5C;">
          <children>
-            <Label layoutX="324.0" layoutY="296.0" prefHeight="108.0" prefWidth="216.0" text="Placeholder: Create Page" textAlignment="CENTER" />
-            <Label text="Recipe 1" layoutX="160" layoutY="350" prefHeight="108.0" prefWidth="216.0"/>
+            <TextField layoutX="170.0" layoutY="74.0" prefHeight="43.0" prefWidth="591.0" promptText="TITLE" style="-fx-background-color: none;" styleClass="textField" stylesheets="@application.css">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </TextField>
+            <TextField layoutX="173.0" layoutY="148.0" prefHeight="31.0" prefWidth="242.0" promptText="Author" style="-fx-background-color: none;" styleClass="textField" stylesheets="@application.css">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </TextField>
+            <ChoiceBox id="difficultyChoiceBox" fx:id="difficultyChoiceBox" layoutX="530.0" layoutY="148.0" prefHeight="30.0" prefWidth="242.0" style="-fx-background-color: none; -fx-border-color: white;" styleClass="textField" stylesheets="@application.css" />
+            <TextArea id="descriptionBox" layoutX="177.0" layoutY="212.0" prefHeight="124.0" prefWidth="601.0" promptText="Description" style="-fx-background-color: none; -fx-text-fill: white;" />
+            <Button layoutX="807.0" layoutY="42.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="67.0" style="-fx-background-color: white;" text="SAVE" />
+            <TextField layoutX="178.0" layoutY="371.0" prefHeight="59.0" prefWidth="602.0" promptText="Step 1" />
+            <TextField layoutX="177.0" layoutY="463.0" prefHeight="59.0" prefWidth="602.0" promptText="Step 2" />
+            <TextField layoutX="178.0" layoutY="555.0" prefHeight="59.0" prefWidth="602.0" promptText="Step 3" />
          </children>
       </Pane>
    </children>
