--- a/src/Applet/application.css
+++ b/src/Applet/application.css
@@ -6,7 +6,7 @@
     -fx-background-insets: 0 0 -1 0, 0, 1;
     -fx-background-radius: 5, 5, 4;
     -fx-padding: 3 30 3 30;
-    -fx-text-fill: #242d35;
+    -fx-text-fill: #715c5c;
     -fx-font-size: 14px; 
 }
 
@@ -16,8 +16,15 @@
         linear-gradient(#9a9a9a, #909090),
         linear-gradient(white 0%, #f3f3f3 50%, #f3f3f3 51%, #f2f2f2 100%); */
     -fx-text-fill: black;
-    width: 400px;
 }
+
+.title {
+    -fx-font-size: 16px;
+    -fx-background-color: none;
+    -fx-text-fill: white;
+}
+
+
 /*
 .button:hover{
     -fx-background-color:
